--- a/tinker/faculty_bios/templates/faculty-bio-home.html
+++ b/tinker/faculty_bios/templates/faculty-bio-home.html
@@ -39,11 +39,11 @@
           <ul class="button-group">
             {% if form.is_published %}
               <li><a href="{{ form.path }}" class="small button success">View</a></li>
-              <li><a href="/faculty_bios/edit/{{ form.id }}" class="small button">Edit</a></li>
+              <li><a href="/faculty-bios/edit/{{ form.id }}" class="small button">Edit</a></li>
             {% else %}
               <li><a class="small button success">Not Approved</a></li>
             {% endif %}
-            <li><a href="/faculty-bios/delete/{{ form.id }}" class="small button alert">Delete</a></li>
+            <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}" data-faculty-bio-id="{{ form.id }}" class="small button alert delete-press">Delete</a></li>
            </ul>
         </div>
         <hr/>
@@ -54,6 +54,27 @@
 
   </div>
 </div>
+
+
+{#Delete confirm modal#}
+<div id="confirmModal" class="reveal-modal" data-reveal>
+  <h2>Are you sure you want to delete?</h2>
+  <p class="lead">Your faculty bio page will removed.</p>
+  <a class="modal-confirm" id="modal-confirm" href="/faculty-bios/delete/formid">Delete</a>
+  <a class="close-reveal-modal">&#215;</a>
+</div>
+
+{% endblock %}
+
+{% block scripts %}
+
+{#  Script to update the modal submit to delete the correct form#}
+  <script type="text/javascript">
+    $(".delete-press").click(function(){
+      $("#modal-confirm").attr("href", "/faculty-bios/delete/" + $(this).data('faculty-bio-id'));
+    });
+  $(document).foundation();
+  </script>
 
 {% endblock %}
 
