--- a/tinker/faculty_bios/templates/faculty-bio-home.html
+++ b/tinker/faculty_bios/templates/faculty-bio-home.html
@@ -13,7 +13,7 @@
 <div class="row">
   <div class="large-12 columns">
 
-    <p>Here are the bios that you are able to edit.
+    <p>Below is a list of faculty bios you have access to edit. If you don't see your faculty bio, please contact your web author.
     </p>
   </div>
  </div>
@@ -49,7 +49,7 @@
         <hr/>
       </div>
     {% endfor %}
-      <a href="/faculty-bios/edit/new" class="small button success">Create New</a>
+      <a href="/faculty-bios/edit/new" class="small button success">Create New Bio</a>
 
 
   </div>
