--- a/tinker/faculty_bios/templates/faculty-bio-confirm.html
+++ b/tinker/faculty_bios/templates/faculty-bio-confirm.html
@@ -1,6 +1,6 @@
 {% extends "tinker-base.html" %}
 
-{% block title %}Success{% endblock %}
+{% block title %}Congrats!{% endblock %}
 
 {% block main_content %}
 
@@ -8,7 +8,7 @@
     <div class="large-12 columns">
 
         <h3>
-          Thanks for your Faculty Bio Edit!
+          You've successfully edited your faculty bio. In just a few minutes you should be able to see all your changes on your page. If you have any questions, feel free to contact your web author.
         </h3>
 
     </div>
