--- a/tinker/faculty_bios/templates/faculty-bio-confirm.html
+++ b/tinker/faculty_bios/templates/faculty-bio-confirm.html
@@ -2,14 +2,19 @@
 
 {% block title %}Congrats!{% endblock %}
 
+
+
 {% block main_content %}
 
   <div class="row">
     <div class="large-12 columns">
-
-        <h3>
+        <h1>Congrats!</h1>
+        <p>
           You've successfully edited your faculty bio. In just a few minutes you should be able to see all your changes on your page. If you have any questions, feel free to contact your web author.
-        </h3>
+          <br/>
+          Thanks for keeping your bio up to date!
+        </p>
+
 
     </div>
   </div>
