E-announcements are created

--- a/tinker/faculty_bios/templates/faculty-bio-form.html
+++ b/tinker/faculty_bios/templates/faculty-bio-form.html
@@ -79,7 +79,7 @@
 
 
               {% elif field.type == "SelectMultipleField" %}
-                {{ field(size=10, class="largeselect") }}
+                {{ field(class="largeselect") }}
 
               {% elif field.type == "HeadingField" %}
                 <h3>{{ field.label }}</h3>
