updated templates for faculty bios

--- a/tinker/faculty_bios/templates/faculty-bio-confirm-edit.html
+++ b/tinker/faculty_bios/templates/faculty-bio-confirm-edit.html
@@ -10,7 +10,7 @@
     <div class="large-12 columns">
         <h1>Congrats!</h1>
         <p>
-          You've successfully edited your faculty bio. In just a few minutes you should be able to see all your changes on your page. If you have any questions, feel free to contact your web author.
+            You've successfully edited your faculty bio. If you have any questions, feel free to contact your web author.
           <br/>
           Thanks for keeping your bio up to date!
         </p>
