--- a/tinker/faculty_bios/templates/faculty-bio-form.html
+++ b/tinker/faculty_bios/templates/faculty-bio-form.html
@@ -100,6 +100,8 @@
 
           {% elif field.name == "image_url" %}
             {# The image_url field is hidden. So get the image from this. #}
+
+              <p>Is your image a perfect square? Don't forget to crop it at <a href="http://www.croppola.com">croppola.com</a>. Thanks!</p>
             {{ form['image_url'] }}
             <img id="display_image" src="" style="height:300px; "/>
             <script type="text/javascript">
