hide 'No image' text if an image exists

--- a/tinker/faculty_bios/templates/faculty-bio-form.html
+++ b/tinker/faculty_bios/templates/faculty-bio-form.html
@@ -112,6 +112,7 @@
                 {
                     $("#display_image").attr("src", "http://cdn1.bethel.edu/resize/unsafe/400x0/smart/http://www.bethel.edu/" + ($("#image_url").val()));
                      $("#display_image").show()
+                    $("#image").hide()
                 }
             </script>
             <hr />
