Updated faculty bios confirmation message to display workflow status

--- a/tinker/faculty_bios/templates/faculty-bio-confirm-new.html
+++ b/tinker/faculty_bios/templates/faculty-bio-confirm-new.html
@@ -11,10 +11,13 @@
         <h1>Congrats!</h1>
         <p>
             You've successfully submitted your faculty bio. If you have any questions, feel free to contact your web author.
+            <br />
+            {% if workflow %}
+                <p>Your bio is currently in a workflow</p>
+            {% endif %}
             <br/>
           Thanks for creating your bio!
         </p>
-
 
     </div>
   </div>
