updated tinker text confirmation msg

--- a/tinker/faculty_bios/templates/faculty-bio-confirm-new.html
+++ b/tinker/faculty_bios/templates/faculty-bio-confirm-new.html
@@ -10,7 +10,7 @@
     <div class="large-12 columns">
         <h1>Congrats!</h1>
         <p>
-            You've successfully submitted your faculty bio. If you have any questions, feel free to contact your web author.
+            Congrats! You've successfully created a new bio. Since it's a brand new bio, it's been sent for approval but will be ready to view in 2-3 business days. Thanks for creating your bio!
             <br />
             {% if workflow %}
                 <p>Your bio is currently in a workflow</p>
