--- a/tinker/faculty_bios/templates/faculty-bio-in-workflow.html
+++ b/tinker/faculty_bios/templates/faculty-bio-in-workflow.html
@@ -1,6 +1,6 @@
 {% extends "tinker-base.html" %}
 
-{% block title %}Success{% endblock %}
+{% block title %}Pending Approval{% endblock %}
 
 {% block page_title %}Bethel University Tinker{% endblock %}
 
@@ -10,10 +10,10 @@
     <div class="large-12 columns">
 
         <h3>
-          Edits pending approval
+          Edits Pending Approval
         </h3>
 
-        <p>Your edits are pending approval. Please wait until they have been approved before you make additional edits. Go back to your <a href="/faculty-bios">faculty bios</a>.</p>
+        <p>You recently made edits to your bio and are currently pending approval. Please wait until the changes have been approved before you make additional edits. Go back to your <a href="/faculty-bios">faculty bios</a>.</p>
 
 
     </div>
