--- a/tinker/faculty_bios/templates/faculty-bio-home.html
+++ b/tinker/faculty_bios/templates/faculty-bio-home.html
@@ -59,7 +59,7 @@
 {#Delete confirm modal#}
 <div id="confirmModal" class="reveal-modal" data-reveal>
   <h2>Are you sure you want to delete?</h2>
-  <p class="lead">Your faculty bio page will removed.</p>
+  <p class="lead">Your faculty bio page will be removed.</p>
   <a class="modal-confirm" id="modal-confirm" href="/faculty-bios/delete/formid">Delete</a>
   <a class="close-reveal-modal">&#215;</a>
 </div>
