--- a/tinker/faculty_bios/templates/faculty-bio-confirm-edit.html
+++ b/tinker/faculty_bios/templates/faculty-bio-confirm-edit.html
@@ -10,9 +10,11 @@
     <div class="large-12 columns">
         <h1>Congrats!</h1>
         <p>
-            You've successfully edited your faculty bio. If you have any questions, feel free to contact your web author.
-          <br/>
-          Thanks for keeping your bio up to date!
+            You've successfully edited your bio. Your edits have been sent for approval but will be ready to view in 2-3 business days.
+            <br/>
+            Thanks for keeping your bio up to date!
+            <br/>
+            If you have any questions, you can contact Lauren Pareigat (CAS) or Annette Abel (CAPS/GS).
         </p>
 
 
