Faculty bio "create new" button only appears if the user has 0 bios in their list

--- a/tinker/faculty_bios/templates/faculty-bio-home.html
+++ b/tinker/faculty_bios/templates/faculty-bio-home.html
@@ -21,8 +21,9 @@
 <div class="row">
 
   <div class="large-12 columns">
-
+    {% if forms|length == 0 %}
       <a href="/faculty-bios/edit/new#page-title" class="small button success">Create New Bio</a>
+    {% endif %}
    {% for form in forms%}
       <div class="row">
         <div class="large-6 columns">
