--- a/tinker/faculty_bios/templates/faculty-bio-in-workflow.html
+++ b/tinker/faculty_bios/templates/faculty-bio-in-workflow.html
@@ -13,7 +13,7 @@
           Edits Pending Approval
         </h3>
 
-        <p>You recently made edits to your bio and are currently pending approval. Please wait until the changes have been approved before you make additional edits. Go back to your <a href="/faculty-bios">faculty bios</a>.</p>
+        <p>You recently made edits to your bio and are currently pending approval. Please wait until the changes have been approved before you make additional edits. Go back to your <a href="/faculty-bio">faculty bios</a>.</p>
 
 
     </div>
