--- a/tinker/faculty_bios/templates/faculty-bio-home.html
+++ b/tinker/faculty_bios/templates/faculty-bio-home.html
@@ -22,7 +22,7 @@
 
   <div class="large-12 columns">
     {% if forms|length == 0 %}
-      <a href="/faculty-bios/edit/new#page-title" class="small button success">Create New Bio</a>
+      <a href="/faculty-bio/edit/new#page-title" class="small button success">Create New Bio</a>
     {% endif %}
    {% for form in forms%}
       <div class="row">
@@ -41,7 +41,7 @@
           <ul class="button-group">
             {% if form.path != '' %}
               <li><a href="{{ form.path }}" class="small button success">View</a></li>
-              <li><a href="/faculty-bios/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>
+              <li><a href="/faculty-bio/edit/{{ form.id }}#page-title" class="small button">Edit</a></li>
             {% else %}
               <li><a class="small button success">Not Approved</a></li>
             {% endif %}
@@ -61,7 +61,7 @@
 <div id="confirmModal" class="reveal-modal" data-reveal>
   <h2>Are you sure you want to delete?</h2>
   <p class="lead">Your faculty bio page will be removed.</p>
-  <a class="modal-confirm" id="modal-confirm" href="/faculty-bios/delete/formid">Delete</a>
+  <a class="modal-confirm" id="modal-confirm" href="/faculty-bio/delete/formid">Delete</a>
   <a class="close-reveal-modal">&#215;</a>
 </div>
 
@@ -72,7 +72,7 @@
 {#  Script to update the modal submit to delete the correct form#}
   <script type="text/javascript">
     $(".delete-press").click(function(){
-      $("#modal-confirm").attr("href", "/faculty-bios/delete/" + $(this).data('faculty-bio-id'));
+      $("#modal-confirm").attr("href", "/faculty-bio/delete/" + $(this).data('faculty-bio-id'));
     });
   $(document).foundation();
   </script>
