Updated confirmation texts of faculty bios

--- a/tinker/faculty_bios/templates/faculty-bio-confirm-new.html
+++ b/tinker/faculty_bios/templates/faculty-bio-confirm-new.html
@@ -9,11 +9,10 @@
   <div class="row">
     <div class="large-12 columns">
         <h1>Congrats!</h1>
-        <p>
-            You've successfully created a new bio. Your brand new bio has been sent for approval but will be ready to view in 2-3 business days.
-            <br />
-          Thanks for creating your bio!
-        </p>
+        <p>You've successfully created a new bio. Your brand new bio has been sent for approval but will be ready to view in 2-3 business days.</p>
+
+        <p>Thanks for creating your bio!</p>
+
 
     </div>
   </div>
