--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -184,49 +184,67 @@
 <script type="text/javascript">
 
     function testExpertise(){
-            var heading = $("#heading")[0];
-            var val = heading.options[heading.selectedIndex].innerHTML;
-            if(val == "Areas of expertise"){
-              $("#areas_wrap").show();
-              $("#research_interests_wrap").hide();
-              $("#teaching_speciality_wrap").hide();
+        var heading = $("#heading")[0];
+        var val = heading.options[heading.selectedIndex].innerHTML;
+        if(val == "Areas of expertise"){
+          makeRequired();
+          $("#areas_wrap").show();
+          $("#research_interests_wrap").hide();
+          $("#teaching_speciality_wrap").hide();
 
-                $('#areas').keyup(function() {
-                    var count = $(this).val().length;
-                    $('#areas_current_count').text(count);
-                    if( count > 350)
-                        $('#areas_current_count').css("color", "#f04124");
-                    else
-                        $('#areas_current_count').css("color", "#000000");
-                });
-            }
-            else if( val == "Research interests"){
-              $("#areas_wrap").hide();
-              $("#research_interests_wrap").show();
-              $("#teaching_speciality_wrap").hide();
-                $('#research_interests').keyup(function() {
-                    var count = $(this).val().length;
-                    $('#research_interests_current_count').text(count);
-                    if( count > 350)
-                        $('#research_interests_current_count').css("color", "#f04124");
-                    else
-                        $('#research_interests_current_count').css("color", "#000000");
-                });
-            }
-            else if( val == "Teaching speciality"){
-              $("#areas_wrap").hide();
-              $("#research_interests_wrap").hide();
-              $("#teaching_speciality_wrap").show();
-                $('#teaching_specialty').keyup(function() {
-                    var count = $(this).val().length;
-                    $('#teaching_speciality_current_count').text(count);
-                    if( count > 350)
-                        $('#teaching_speciality_current_count').css("color", "#f04124");
-                    else
-                        $('#teaching_speciality_current_count').css("color", "#000000");
-                });
-            }
-          }
+            $('#areas').keyup(function() {
+                var count = $(this).val().length;
+                $('#areas_current_count').text(count);
+                if( count > 350)
+                    $('#areas_current_count').css("color", "#f04124");
+                else
+                    $('#areas_current_count').css("color", "#000000");
+            });
+        }
+        else if( val == "Research interests"){
+          makeRequired();
+          $("#areas_wrap").hide();
+          $("#research_interests_wrap").show();
+          $("#teaching_speciality_wrap").hide();
+            $('#research_interests').keyup(function() {
+                var count = $(this).val().length;
+                $('#research_interests_current_count').text(count);
+                if( count > 350)
+                    $('#research_interests_current_count').css("color", "#f04124");
+                else
+                    $('#research_interests_current_count').css("color", "#000000");
+            });
+        }
+        else if( val == "Teaching speciality"){
+          makeRequired();
+          $("#areas_wrap").hide();
+          $("#research_interests_wrap").hide();
+          $("#teaching_speciality_wrap").show();
+            $('#teaching_specialty').keyup(function() {
+                var count = $(this).val().length;
+                $('#teaching_speciality_current_count').text(count);
+                if( count > 350)
+                    $('#teaching_speciality_current_count').css("color", "#f04124");
+                else
+                    $('#teaching_speciality_current_count').css("color", "#000000");
+            });
+        }
+    }
+
+    function makeRequired(){
+        $('#areas').attr('required', 'false');
+        $('#research_interests').attr('required', 'false');
+        $('#teaching_speciality').attr('required', 'false');
+        heading = $('#heading')[0];
+        var text = heading.options[heading.selectedIndex].innerHTML;
+
+        if( text == "Areas of expertise")
+            $('#areas').attr('required', 'true');
+        else if( text == "Research interests")
+            $('#research_interests').attr('required', 'true');
+        else if( text == "Teaching speciality")
+            $('#teaching_speciality').attr('required', 'required');
+    }
 
     function newFieldset(id){
             var school = 'school' + id;
