Fac bio form update

--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -199,6 +199,10 @@
                     $('#areas_current_count').css("color", "#f04124");
                 else
                     $('#areas_current_count').css("color", "#000000");
+                $('#research_interests').val('');
+                $('#research_interests_current_count').text('0');
+                $('#teaching_specialty').val('');
+                $('#teaching_speciality_current_count').text('0');
             });
         }
         else if( val == "Research interests"){
@@ -213,6 +217,10 @@
                     $('#research_interests_current_count').css("color", "#f04124");
                 else
                     $('#research_interests_current_count').css("color", "#000000");
+                $('#areas').val('');
+                $('#areas_current_count').text('0');
+                $('#teaching_specialty').val('');
+                $('#teaching_speciality_current_count').text('0');
             });
         }
         else if( val == "Teaching speciality"){
@@ -227,6 +235,10 @@
                     $('#teaching_speciality_current_count').css("color", "#f04124");
                 else
                     $('#teaching_speciality_current_count').css("color", "#000000");
+                $('#areas').val('');
+                $('#areas_current_count').text('0');
+                $('#research_interests').val('');
+                $('#research_interests_current_count').text('0');
             });
         }
     }
